last screen done

--- a/practice_1/pubspec.yaml
+++ b/practice_1/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
     - assets/standing-man.png
     - assets/whale.png
     - assets/meditation.png
+    - assets/figures.png
     - assets/2.0x/
     - assets/2.0x/meditation.png
     - assets/3.0x/
